openshift/argocd/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: fruits
    app.kubernetes.io/component: fruits
    app.kubernetes.io/instance: fruits
    app.kubernetes.io/name: fruits
    app.kubernetes.io/part-of: fruits
    app.openshift.io/runtime: camel
  name: fruits
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fruits
  template:
    metadata:
      labels:
        app: fruits
    spec:
      containers:
        - name: fruits
          imagePullPolicy: IfNotPresent
          image: image-registry.openshift-image-registry.svc:5000/demo-pipelines/camel-quarkus-cicd:development
          ports:
          - containerPort: 8080
            protocol: TCP
      restartPolicy: Always
  strategy:
    type: RollingUpdate
