openshift/argocd/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fruits
  name: fruits
  namespace: demo-pipelines
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fruits
  sessionAffinity: None
  type: ClusterIP
