openshift/argocd/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fruits
  name: fruits
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: fruits
    weight: 100
